# risc0

./: Cargo.toml  README.md
.github/workflows/: main.yml
bazel/rules/risc0/: defs.bzl
examples/: Cargo.toml
examples/cpp/battleship/: protocol.cpp
examples/cpp/deck/: protocol.cpp
examples/hello-world/: Cargo.toml
examples/hello-world/methods/guest/src/: main.rs
examples/hello-world/src/: lib.rs  main.rs
examples/json/: Cargo.toml
examples/json/methods/guest/: Cargo.toml
examples/json/methods/guest/src/: main.rs
examples/json/res/: example.json
examples/json/src/: main.rs
risc0/build_kernel/: Cargo.toml
risc0/build_kernel/src/: lib.rs
risc0/circuit/recursion/: Cargo.toml  build.rs
risc0/circuit/recursion-sys/cxx/: ffi.cpp  ffi.h  step_compute_accum.cpp  step_verify_bytes.cpp  step_verify_mem.cpp
risc0/circuit/rv32im-sys/: build.rs
risc0/circuit/rv32im-sys/cxx/: bigint.cpp  extern.cpp  ffi.cpp  ffi.h  step_compute_accum.cpp  step_exec.cpp  step_verify_accum.cpp  step_verify_bytes.cpp  step_verify_mem.cpp
risc0/core/: Cargo.toml  elf.cpp  elf.h
risc0/core/src/: perf.rs
risc0/r0vm/: Cargo.toml
risc0/tools/: Cargo.toml
risc0/zkp/: Cargo.toml
risc0/zkp/src/verify/: merkle.rs  mod.rs
risc0/zkvm/: Cargo.toml  lib.rs
risc0/zkvm/circuit/: mem_check.cpp
risc0/zkvm/circuit/test/: risc0-simulate.cpp
risc0/zkvm/platform/: memory.h  risc0.ld
risc0/zkvm/prove/: exec.cpp  exec.h  method_id.cpp  method_id.h  riscv.cpp  riscv.h
risc0/zkvm/prove/bench/: benchmark.cpp
risc0/zkvm/prove/make-id/: make-id.cpp
risc0/zkvm/prove/test/: hw.cpp
risc0/zkvm/r0vm/: r0vm.cpp
risc0/zkvm/sdk/cpp/guest/test/: test.cpp
risc0/zkvm/sdk/cpp/host/: c_api.cpp  c_api.h  receipt.cpp
risc0/zkvm/sdk/rust/guest/src/: gpio.rs  lib.rs  memcpy.s  memset.s
risc0/zkvm/sdk/rust/host/src/: ffi.rs  lib.rs
risc0/zkvm/sdk/rust/src/: method_id.rs
risc0/zkvm/sdk/rust/src/host/: mod.rs
risc0/zkvm/src/: receipt.rs
risc0/zkvm/src/host/client/prove/: mod.rs
risc0/zkvm/src/receipt/: composite.rs  groth16.rs
